--- a/Bab/bab3.tex
+++ b/Bab/bab3.tex
@@ -1,8 +1,11 @@
 \chapter{Analisis}
-\label{chap:analisis}
 
-\section{Ruangan}
-Ruangan dalam dunia nyata adalah sebuah bidang 3 dimensi yang memiliki rongga di dalamnya. Ruangan ini pada umumnya memiliki bentuk yang beragam sesuai dengan arsitekturnya pada saat dibangun. Berbeda dengan ruangan pada dunia nyata, bentuk dan dimensi ruangan dalam permasalahan di skripsi ini akan dibatasi. Ruangan tidak dimodelkan dalam bidang 3 dimensi, tetapi dalam bidang 2 dimensi. Selain itu, bentuk ruangan juga dibatasi sehingga berbentuk persegi panjang. Dengan bentuk dan dimensi ini, spesifikasi ruangan akan terdiri dari panjang dan lebar seperti pada gambar~\ref{fig:model_ruangan}. Kedua spesifikasi ini akan membentuk daerah yang akan dicakup oleh kamera-kamera CCTV.
+\section{Pemodelan Masalah}
+Permasalahan yang dibahas di skripsi ini perlu dimodelkan terlebih dahulu sebelum diselesaikan. Hal ini bertujuan agar permasalahan ini menjadi lebih konkret sehingga pembaca dan penulis memiliki satu persepsi yang sama.
+
+
+\subsection{Ruangan}
+Ruangan dalam dunia nyata dapat dipahami sebagai sebuah bidang 3 dimensi yang memiliki rongga di dalamnya. Ruangan ini pada umumnya memiliki bentuk yang beragam sesuai dengan arsitekturnya pada saat dibangun. Berbeda dengan ruangan pada dunia nyata, bentuk dan dimensi ruangan dalam permasalahan di skripsi ini akan dibatasi. Ruangan tidak dimodelkan dalam bidang 3 dimensi, tetapi dalam bidang 2 dimensi. Selain itu, bentuk ruangan juga dibatasi sehingga berbentuk persegi panjang. Dengan bentuk dan dimensi ini, spesifikasi ruangan akan terdiri dari panjang dan lebar seperti pada gambar~\ref{fig:model_ruangan}. Kedua spesifikasi ini akan membentuk daerah yang akan dicakup oleh kamera-kamera CCTV.
 
 \begin{figure}[H]
 	\centering  
@@ -13,7 +16,7 @@ Ruangan dalam dunia nyata adalah sebuah bidang 3 dimensi yang memiliki rongga di
 
 %Dengan diketahuinya spesifikasi ruangan, maka akan diketahui daerah yang harus dicakup oleh kamera-kamera CCTV. Kamera-kamera CCTV akan ditempatkan dengan sedemian rupa sehingga seluruh daerah dapat tercakup. Untuk menyatakan posisi penempatan kamera CCTV, pemodelan masalah juga menggunakan sistem koordinat kertesius sehingga posisi penempatan dapat dinyatakan dalam koordinat x dan y. Dengan demikian, posisi penempatan kamera CCTV dapat dipahami lebih mudah.
 
-\section{Kamera CCTV}
+\subsection{Kamera CCTV}
 Hingga saat ini, sudah terdapat banyak jenis kamera CCTV yang diproduksi. Setiap kamera CCTV tersebut memiliki spesifikasinya masing-masing. Dalam permasalahan ini, terdapat 2 spesifikasi kamera CCTV yang digunakan, yaitu jarak pandang efektif dan besar sudut pandang. Gambar~\ref{fig:model_kamera} memodelkan kamera CCTV dengan kedua spesifikasi tersebut. Jarak pandang efektif adalah jarak pandang terjauh kamera CCTV untuk mengenali objek yang akan dipantau. Besar sudut pandang menunjukkan lebar pantauan kamera CCTV. Dalam permasalahan ini, jenis kamera CCTV yang digunakan hanya berjumlah 1 buah.
 
 \begin{figure}[H]
@@ -23,7 +26,7 @@ Hingga saat ini, sudah terdapat banyak jenis kamera CCTV yang diproduksi. Setiap
 	\label{fig:model_kamera}
 \end{figure}
 
-\section{Penempatan Kamera CCTV}
+\subsection{Penempatan Kamera CCTV}
 Setelah ruangan dan kamera CCTV dimodelkan, langkah selanjutnya adalah memodelkan penempatan kamera-kamera CCTV. Setiap kamera CCTV dapat ditempatkan di mana saja selama posisinya berada di dalam ruangan. Selain posisi, penempatan juga melibatkan arah pandang kamera CCTV. Posisi dan arah pandang akan mempengaruhi daerah yang dapat dicakup oleh kamera CCTV. Untuk memodelkan penempatan ini, digunakan sistem koordinat kartesius sehingga posisi penempatan dinyatakan dalam bentuk koordinat (x,y). Arah padang kamera CCTV juga dapat dinyatakan dengan besar sudut arah pandang terhadap garis \(0^\circ\) yang melewati titik posisi kamera CCTV. Posisi dan arah pandang kamera CCTV dimodelkan seperti pada gambar~\ref{fig:model_penempatan_kamera} berikut ini.
 
 \begin{figure}[H]
@@ -33,13 +36,45 @@ Setelah ruangan dan kamera CCTV dimodelkan, langkah selanjutnya adalah memodelka
 	\label{fig:model_penempatan_kamera}
 \end{figure}
 
-\section{Daerah Cakupan Kamera CCTV}
-Setiap penempatan kamera-kamera CCTV memiliki daerah yang dicakupnya masing-masing. Apabila terdapat 2 atau lebih kamera CCTV yang mencakup suatu daerah yang sama, maka daerah tersebut merupakan daerah irisan dari cakupan kamera-kamera CCTV tersebut. Daerah irisan ini memiliki bentuk yang tidak sederhana tetapi mudah untuk dipahami oleh manusia dengan penglihatan dan nalarnya. Berbeda dengan manusia, perangkat lunak tidak memiliki nalar untuk memahami kondisi daerah tersebut. Definisi daerah pun menjadi abstrak untuk dipahami ketika menyelesaikan permasalahan ini.
+\subsection{Daerah Cakupan}
+Setiap penempatan kamera-kamera CCTV memiliki daerah yang dicakupnya masing-masing. Terdapat kasus dimana ada 2 atau lebih kamera CCTV yang mencakup suatu daerah yang sama. Daerah irisan dari cakupan-cakupan tersebut memiliki bentuk tidak sederhana sehingga sulit untuk diolah. Daerah cakupan perlu didefiniskan lebih lanjut karena menjadi bagian yang menentukan jumlah kamera CCTV. Untuk mengatasi masalah ini, daerah pada ruangan dapat dimodelkan dalam bentuk grid point seperti pada gambar~\ref{fig:model_ruangan_grid_point}. Dengan dimodelkannya ruangan dalam bentuk grid point, daerah yang harus dicakup dalam ruangan dibagi menjadi daerah-daerah yang lebih kecil atau yang disebut cell.
 
+\begin{figure}[H]
+	\centering  
+	\includegraphics[scale=0.5]{model_ruangan_grid_point}
+	\caption[Pemodelan ruangan dalam bentuk grid point]{Pemodelan ruangan dalam bentuk grid point} 
+	\label{fig:model_ruangan_grid_point}
+\end{figure}
 
+Setiap cell dalam ruangan memiliki ukuran yang sama dengan cell-cell lainnya. Panjang harizontal dan vertikal dari cell tidak selalu berukuran sama sehingga cell dapat berbentuk persegi panjang. Penentuan ukuran cell merupakan bagian yang akan diteliti pada bagian eksperimen. Selain itu, setiap cell juga memiliki titik tengah. Titik tengah ini berfungsi sebagai titik acuan bagi kamera-kamera CCTV. Apabila titik tengah dari suatu cell berada dalam cakupan kamera CCTV, maka cell tersebut dianggap tercakup. Dengan demikian, kamera CCTV memiliki daerah cakupan yang terdiri atas kumpulan cell. Pada gambar~\ref{fig:daerah_cakupan_sebelum_grid_point} dan gambar~\ref{fig:daerah_cakupan_sesudah_grid_point}, terlihat perbedaan daerah cakupan kamera CCTV antara sebelum dan sesudah dimodelkannya ruangan dalam bentuk grid point.
 
+\begin{figure}[H]
+	\centering  
+	\includegraphics[scale=0.5]{daerah_cakupan_sebelum_grid_point}
+	\caption[Daerah cakupan sebelum pemodelan grid point]{Daerah cakupan sebelum pemodelan grid point}
+	\label{fig:daerah_cakupan_sebelum_grid_point}
+\end{figure}
 
+\begin{figure}[H]
+	\centering  
+	\includegraphics[scale=0.5]{daerah_cakupan_sesudah_grid_point}
+	\caption[Daerah cakupan sesudah pemodelan grid point]{Daerah cakupan sesudah pemodelan grid point}
+	\label{fig:daerah_cakupan_sesudah_grid_point}
+\end{figure}
 
+Dengan pemodelan grid point, perhitungan tingkat overlap dan out of bound dapat dilakukan dengan perhitungan jumlah cell. Tingkat daerah overlap atau daerah yang dicakup oleh lebih dari 1 kamera CCTV dapat dihitung dengan membandingkan jumlah cell overlap dengan jumlah cell pada ruangan. Sedangkan tingkat daerah out of bound atau daerah cakupan yang berada di luar ruangan dapat dilakukan dengan membuat cell cakupan semu di luar ruangan. Jumlah cell semu ini akan dibandingkan dengan jumlah cell di dalam ruangan untuk mendapatkan tingkat out of bound. Gambar~\ref{fig:daerah_overlap_out_of_bound} berikut ini menunjukkan daerah overlap dan out of bound.
+
+\begin{figure}[H]
+	\centering  
+	\includegraphics[scale=0.5]{daerah_overlap_out_of_bound}
+	\caption[Daerah overlap dan out of bound]{Daerah overlap dan out of bound}
+	\label{fig:daerah_overlap_out_of_bound}
+\end{figure}
+
+\section{Penyelesaian Masalah}
+Setelah memodelkan masalah, selanjutnya adalah mengubah masalah ke bentuk masalah linear programming agar dapat diselesaikan. Masalah ini cocok untuk diselesaikan menggunakan teknik linear programming karena termasuk dalam masalah optimasi. Dalam masalah ini, terdapat tujuan yang akan dicapai, yaitu mendapatkan jumlah kamera CCTV yang minimum. Untuk mencapai tujuan tersebut, terdapat satu ketentuan yang harus dipenuhi, yaitu mencakup seluruh daerah pada ruangan. Dengan pemodelan yang sudah dibahas sebelumnya, masalah ini siap untuk diselesaikan menggunakan teknik linear programming.
+
+\subsection{Variabel Keputusan}
 
 
 
